# plutarch-template

./: .gitignore  cabal.project  flake.nix  plutarch-template.cabal
app/: Main.hs
plutarch/: flake.nix
